# quiz_game_api

./: .env.local  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2f0a4d1f8e21_add_quiz_sessions.py  9c6f48ade1f5_create_tebles_quiz_question_answer_.py
app/: main.py
app/core/config/: settings.py
app/core/database/: base_model.py  session_maker.py
app/core/docs/: tags_description.py
app/models/: __init__.py  base.py
app/models/quiz/: answer_option.py  question.py  quiz.py
app/models/session/: __init__.py  quiz_session.py  session_answer.py  session_participant.py
app/repositories/: BaseRepository.py  __init__.py
app/repositories/quiz/: quiz_repository.py
app/routers/: __init__.py  session.py
app/routers/quiz/: answer_option.py  question.py  quiz.py
app/schemas/: CoreModel.py  __init__.py
app/schemas/quiz/: answer_option.py  question.py  quiz.py
app/schemas/session/: __init__.py  quiz_session.py
app/services/: quiz_session.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
